      primitive operator had been inadvertently omitted. %$

      \item \code{setHook(hookname, value, action="replace")} set the
      hook to be the value, rather than a list containing the value as
      documented. (\PR{15167})

      \item  If a package used a \file{NEWS.Rd} file, the main HTML
      package index page did not link to it.  (Reported by Dirk
      Eddelbuettel.)
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.2 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{lgamma(x)} for very small \code{x} (in the
      denormalized range) is no longer \code{Inf} with a warning.

      \item \code{image()} now sorts an unsorted \code{breaks} vector,
      with a warning.

      \item The internal methods for \code{tar()} and \code{untar()} do
      a slightly more general job for \sQuote{ustar}-style handling of
      paths of more than 100 bytes.

      \item Packages \pkg{compiler} and \pkg{parallel} have been added
      to the reference index (\file{refman.pdf}).

      \item \code{untar(tar = "internal")} has some support for
      \code{pax} headers as produced by e.g. \command{gnutar --posix}
      (which seems prevalent on OpenSUSE 12.2) or
      \command{bsdtar --format pax}, including long path and link names.

      \item \code{sQuote()} and \code{dQuote()} now handle 0-length
      inputs.  (Suggestion of Ben Bolker.)

      \item \code{summaryRprof()} returns zero-row data frames rather
      than throw an error if no events are recorded, for consistency.
      
      \item The included version of PCRE has been updated to 8.32.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item The default for \env{TAR} on Windows for \command{R CMD
	build} has been changed to be \samp{internal} if no
      \command{tar} command is on the path.

      This enables most packages to be built \sQuote{out of the box}
      without \command{Rtools}: the main exceptions are those which need