@@ -44,6 +44,7 @@ export(cacheMethod)
 export(callGeneric)
 export(callNextMethod)
 export(canCoerce)
+export(checkAtAssignment)
 export(checkSlotAssignment)
 export(classMetaName)
 export(classLabel)
