@@ -40,6 +40,7 @@
 \alias{methodsPackageMetaName}
 \alias{metaNameUndo}
 \alias{requireMethods}
+\alias{checkAtAssignment}
 \alias{checkSlotAssignment}
 \alias{defaultPrototype}
 \alias{isClassDef}
@@ -112,6 +113,7 @@ metaNameUndo(strings, prefix, searchForm = FALSE)
 
 requireMethods(functions, signature, message, where)
 
+checkAtAssignment(cl, name, valueClass)
 checkSlotAssignment(obj, name, value)
 
 defaultPrototype()
@@ -343,7 +345,7 @@ setDataPart(object, value, check = TRUE)
       silently incorrect results.
     }
 
-    \item{\code{checkSlotAssignment}:}{
+    \item{\code{checkSlotAssignment, checkAtAssignment}:}{
       Check that the value provided is allowed for this slot, by
       consulting the definition of the class.  Called from the C code
       that assigns slots.
