@@ -1364,30 +1364,14 @@ SEXP attribute_hidden do_attr(SEXP call, SEXP op, SEXP args, SEXP env)
     return ans;
 }
 
-static void check_slot_name(SEXP obj, SEXP input) 
+static void check_slot_assign(SEXP obj, SEXP input, SEXP value, SEXP env) 
 {
     Rboolean isAttr = FALSE;
-    SEXP alist, name;
+    SEXP alist, name, valueClass, objClass;
 
-    name = install(CHAR(STRING_ELT(input, 0)));
-    if(name == install(".Data") &&  TYPEOF(obj) != S4SXP)
-	return;
-
-    /* Check for a valid slot name; must already have this attr if not .Data */
-    for (alist = ATTRIB(obj); alist != R_NilValue; alist = CDR(alist)) {
-	SEXP tmp = TAG(alist);
-	if (tmp == name) {
-	    isAttr = TRUE;
-	    break;
-	}
-    }
-    if(!isAttr) {
-	SEXP klass;
-	klass = getAttrib(obj, R_ClassSymbol);
-	error(_("\"%s\" is not an existing slot in an object of class \"%s\""),
-	      translateChar(STRING_ELT(input, 0)),
-	      translateChar(STRING_ELT(klass, 0)));
-    }
+    valueClass = R_data_class(value, FALSE);
+    objClass = R_data_class(obj, FALSE);
+    eval( lang4( install("checkAtAssignment"), objClass, input, valueClass ), env );
 }
 
 
@@ -1399,7 +1383,7 @@ SEXP attribute_hidden do_attrgets(SEXP call, SEXP op, SEXP args, SEXP env)
     checkArity(op, args);
 
     if(PRIMVAL(op)) { /* @<- */
-	SEXP input, nlist, ans;
+	SEXP input, nlist, ans, value;
 	PROTECT(input = allocVector(STRSXP, 1));
 
 	nlist = CADR(args);
@@ -1421,10 +1405,11 @@ SEXP attribute_hidden do_attrgets(SEXP call, SEXP op, SEXP args, SEXP env)
 	    return(ans);
 
 	PROTECT(obj = CAR(ans));
-	check_slot_name(obj, input);
-	UNPROTECT(1);
-	/* R_do_slot_assign protects obj and value */
-	return R_do_slot_assign(obj, input, CADDR(ans));
+	PROTECT(value = CADDR(ans));
+	check_slot_assign(obj, input, value, env);
+	value = R_do_slot_assign(obj, input, value);
+	UNPROTECT(2);
+	return value;
     }
 
 
